# msvp

./: .gitignore  README.md  logging.yml  pyproject.toml  sample.env
msvp/: cli.py  systems.py
msvp/templates/: index.html
